[package]
name = "path-offset"
version = "0.1.1"
edition = "2024"
description = "A simple library for offsetting paths"
license = "Apache-2.0"
homepage = "https://github.com/realmorrisliu/path-offset"
repository = "https://github.com/realmorrisliu/path-offset"
documentation = "https://docs.rs/path-offset"

[dependencies]
lyon = { version = "1.0.1", features = ["extra"] }
flo_curves = "0.8.0"
cavalier_contours = "0.6.0"
thiserror = "2.0.12"
